crates/captval/tests/ui/compilefail/not_a_struct.stderr
error: Must derive on a struct

         = help: This macro can only be implemented on a struct.

               #[derive(Captval)]
               struct MyStruct {
                   #[captcha]
                   captval: String,
               }

 --> tests/ui/compilefail/not_a_struct.rs:5:6
  |
5 | enum Test {
  |      ^^^^
